@@ -275,6 +275,10 @@ metadata.loglevel.description=Logging Level
 metadata.locale.name=Locale
 metadata.locale.description=If set, this locale forces the localization to use this locale instead of the one requested by the web browser
 
+metadata.secret.heuristic.enabled.name=Secret Heuristics
+metadata.secret.heuristic.enabled.description=If enabled, password properties are detected based on their name in addition to their metatype information.
+
 # https://issues.apache.org/jira/browse/FELIX-3491
 bundles.success.title=Success
 bundles.success.text=Operation completed succesfully.
+
